--- a/Jungnami/Jungnami/SJ/Storyboard/Content.storyboard
+++ b/Jungnami/Jungnami/SJ/Storyboard/Content.storyboard
@@ -57,29 +57,37 @@
                                                                 </label>
                                                             </subviews>
                                                         </stackView>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="정나미 : 정치는 나의 미래다" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CZo-83-3bc">
-                                                            <rect key="frame" x="12" y="401" width="214" height="24"/>
-                                                            <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                                            <color key="textColor" red="0.88235294119999996" green="0.88235294119999996" blue="0.88235294119999996" alpha="1" colorSpace="custom" customColorSpace="adobeRGB1998"/>
-                                                            <nil key="highlightedColor"/>
-                                                        </label>
                                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="vrs-Yr-le8">
                                                             <rect key="frame" x="0.0" y="0.0" width="375" height="375"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="height" constant="375" id="IDO-Ec-ze9"/>
                                                             </constraints>
                                                         </imageView>
+                                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="contentGradientg" translatesAutoresizingMaskIntoConstraints="NO" id="fRD-f2-xKH">
+                                                            <rect key="frame" x="0.0" y="0.0" width="375" height="375"/>
+                                                        </imageView>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="정나미 : 정치는 나의 미래다" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CZo-83-3bc">
+                                                            <rect key="frame" x="12" y="401" width="351" height="24"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                            <color key="textColor" red="0.88235294119999996" green="0.88235294119999996" blue="0.88235294119999996" alpha="1" colorSpace="custom" customColorSpace="adobeRGB1998"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
                                                     </subviews>
                                                 </view>
                                                 <constraints>
                                                     <constraint firstItem="vrs-Yr-le8" firstAttribute="leading" secondItem="6m7-wz-eR1" secondAttribute="leading" id="0Y7-vI-ApM"/>
+                                                    <constraint firstItem="fRD-f2-xKH" firstAttribute="bottom" secondItem="vrs-Yr-le8" secondAttribute="bottom" id="RDY-o5-aaf"/>
+                                                    <constraint firstAttribute="bottom" secondItem="QFO-HG-odi" secondAttribute="bottom" constant="81.5" id="RG1-By-eeK"/>
                                                     <constraint firstItem="vrs-Yr-le8" firstAttribute="centerX" secondItem="6m7-wz-eR1" secondAttribute="centerX" id="RNa-mm-C9L"/>
+                                                    <constraint firstItem="fRD-f2-xKH" firstAttribute="leading" secondItem="vrs-Yr-le8" secondAttribute="leading" id="WTl-Wd-4Bm"/>
                                                     <constraint firstItem="QFO-HG-odi" firstAttribute="top" secondItem="CZo-83-3bc" secondAttribute="bottom" constant="6" id="cg9-Tx-Quk"/>
                                                     <constraint firstItem="QFO-HG-odi" firstAttribute="leading" secondItem="CZo-83-3bc" secondAttribute="leading" id="cmg-bA-LDd"/>
                                                     <constraint firstItem="vrs-Yr-le8" firstAttribute="top" secondItem="6m7-wz-eR1" secondAttribute="top" id="eC2-mb-IGg"/>
+                                                    <constraint firstAttribute="trailing" secondItem="CZo-83-3bc" secondAttribute="trailing" constant="12" id="ljZ-1h-YYb"/>
                                                     <constraint firstAttribute="trailing" secondItem="vrs-Yr-le8" secondAttribute="trailing" id="oj1-fM-koA"/>
+                                                    <constraint firstItem="fRD-f2-xKH" firstAttribute="trailing" secondItem="vrs-Yr-le8" secondAttribute="trailing" id="sGK-CU-tKv"/>
+                                                    <constraint firstItem="fRD-f2-xKH" firstAttribute="top" secondItem="vrs-Yr-le8" secondAttribute="top" id="vmY-OC-Dda"/>
                                                     <constraint firstItem="CZo-83-3bc" firstAttribute="leading" secondItem="6m7-wz-eR1" secondAttribute="leading" constant="12" id="wEB-B8-2WM"/>
-                                                    <constraint firstItem="CZo-83-3bc" firstAttribute="top" secondItem="vrs-Yr-le8" secondAttribute="bottom" constant="26" id="zK9-O8-J7u"/>
                                                 </constraints>
                                                 <size key="customSize" width="375" height="527"/>
                                                 <connections>
@@ -242,6 +250,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="contentGradientg" width="187" height="333"/>
         <image name="content_chat" width="23" height="23"/>
         <image name="content_chat_smallbubble" width="15" height="15"/>
         <image name="content_heart" width="24" height="24"/>
