--- a/Jungnami/Jungnami/JH/Storyboard/Sub.storyboard
+++ b/Jungnami/Jungnami/JH/Storyboard/Sub.storyboard
@@ -1154,7 +1154,7 @@
                                             <constraint firstAttribute="width" constant="24" id="4jX-qC-3gP"/>
                                             <constraint firstAttribute="height" constant="24" id="Q2G-xg-UwT"/>
                                         </constraints>
-                                        <state key="normal" image="mypage_x"/>
+                                        <state key="normal" image="content_x"/>
                                         <connections>
                                             <action selector="dismissBtn:" destination="vbn-w1-f72" eventType="touchUpInside" id="zXF-Ig-IA5"/>
                                         </connections>
@@ -1477,6 +1477,9 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="hmE-uR-GEn"/>
                     </view>
+                    <connections>
+                        <outlet property="myCoinLbl" destination="GiF-Ct-LGP" id="ghj-aQ-aAD"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="BUo-w6-vs9" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -1493,6 +1496,22 @@
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="87J-zT-VMo">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xLq-iP-ZHD">
+                                        <rect key="frame" x="309" y="271.5" width="46" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="aDu-tT-4be"/>
+                                            <constraint firstAttribute="width" constant="46" id="deZ-G8-NgH"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                        <state key="normal" title="확인">
+                                            <color key="titleColor" red="0.21176470589999999" green="0.7725490196" blue="0.94509803920000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="okBtn:" destination="Spk-zy-5gZ" eventType="touchUpInside" id="Nro-72-UWr"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
                             </scrollView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="D3n-6t-q5z" userLabel="나의코인">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="141"/>
@@ -1554,9 +1573,9 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="투표권(갯수)" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Pc1-DQ-rCK">
-                                <rect key="frame" x="20" y="277.5" width="335" height="17"/>
+                                <rect key="frame" x="20" y="278" width="275" height="17"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="335" id="CNw-MV-CbD"/>
+                                    <constraint firstAttribute="width" constant="275" id="IFC-5X-ONZ"/>
                                 </constraints>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -1584,8 +1603,11 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="Pc1-DQ-rCK" firstAttribute="leading" secondItem="8aO-dG-DCf" secondAttribute="leading" id="2CX-S8-SFi"/>
+                            <constraint firstItem="xLq-iP-ZHD" firstAttribute="trailing" secondItem="8aO-dG-DCf" secondAttribute="trailing" id="3GC-WT-JzH"/>
                             <constraint firstAttribute="trailing" secondItem="PlF-DM-2Wa" secondAttribute="trailing" id="4G1-u8-8TW"/>
                             <constraint firstItem="8aO-dG-DCf" firstAttribute="leading" secondItem="Ee7-y0-aau" secondAttribute="leadingMargin" constant="4" id="4Vc-7n-1YI"/>
+                            <constraint firstItem="xLq-iP-ZHD" firstAttribute="centerY" secondItem="Pc1-DQ-rCK" secondAttribute="centerY" id="83A-0B-9de"/>
                             <constraint firstAttribute="trailingMargin" secondItem="8aO-dG-DCf" secondAttribute="trailing" constant="4" id="A0v-sa-2Az"/>
                             <constraint firstItem="yFf-mu-95c" firstAttribute="top" secondItem="8aO-dG-DCf" secondAttribute="bottom" constant="10" id="A9G-m0-Igu"/>
                             <constraint firstItem="MUu-1E-5Zs" firstAttribute="top" secondItem="PlF-DM-2Wa" secondAttribute="bottom" constant="21" id="DwA-Et-0eS"/>
@@ -1612,7 +1634,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="LaL-XK-YqO" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1703" y="1831"/>
+            <point key="canvasLocation" x="1701.5999999999999" y="1830.1349325337333"/>
         </scene>
         <!--Follow ListVC-->
         <scene sceneID="oWn-wg-86J">
